# i_understand_it_now

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  STYLE_GUIDE_VIZ.md
.github/workflows/: ci.yml
lessons/: 01_big_o.md  02_arrays.md  03_strings.md  04_linked_lists.md  05_stacks_queues_deques.md  06_hash_maps.md  07_recursion.md  08_binary_search.md  09_basic_sorts.md  10_merge_sort.md  11_quick_sort.md  12_heap_sort.md  13_counting_radix_sort.md  14_two_pointers_sliding_window.md  15_prefix_sum.md  16_binary_trees.md  17_binary_search_trees.md  18_heaps_priority_queues.md  19_balanced_bst_avl.md  20_tries.md  21_graph_representations.md  22_graph_bfs_dfs.md  23_matrix_grid_problems.md  24_topological_sort.md  25_shortest_path.md  26_minimum_spanning_tree.md  27_union_find.md  28_backtracking.md  29_greedy_algorithms.md  30_dynamic_programming.md  31_divide_and_conquer.md  32_intervals.md  33_segment_trees_fenwick.md  34_sparse_tables.md  35_monotonic_stacks_queues.md  36_bit_manipulation.md  37_string_algorithms.md  38_math_and_geometry.md
src/: cli.rs  complexity.rs  main.rs  progress.rs
src/problems/: arrays_two_sum.rs  helpers.rs  mod.rs
src/problems/part1_foundations/: arrays.rs  big_o.rs  hash_maps.rs  linked_lists.rs  mod.rs  (+3 more)
src/solutions/: arrays_two_sum.rs  mod.rs
src/tracker/: mod.rs
src/tui/: dashboard.rs  editor.rs  keybindings.rs  lesson_browser.rs  markdown.rs  mod.rs  problem_runner.rs  screens.rs  theme.rs  viz_player.rs
src/visualizer/: engine.rs  instrumented.rs  mod.rs  problem_viz.rs  reference.rs
(+80 files in other folders)
