[package]
name = "iuin"
version = "0.1.0-alpha"
edition = "2021"
description = "I Understand It Now — an interactive terminal app for learning data structures and algorithms in Rust"
license = "MIT"
keywords = ["algorithms", "data-structures", "tui", "education", "rust"]
categories = ["command-line-utilities", "algorithms"]
repository = "https://github.com/asif-a-khan/i_understand_it_now"
authors = ["asif-a-khan"]

[dependencies]
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
ratatui = "0.29"
rand = "0.9"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
